# mcaifee

./: .dockerignore  AGENTS.md  Cargo.toml  Dockerfile.bun-test  Dockerfile.malicious-test  README.md  SKILL.md  install.sh
.github/workflows/: ci.yml  release.yml
Formula/: mcaifee.rb
agents/: openai.yaml
references/: npm-security-sources.md  npm-threat-model.md  source-integration-plan.md
src/: app.rs  main.rs
src/app/: cli.rs
