[package]
name = "mcaifee"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Pre-install npm package risk analyzer for malware and supply-chain indicators"
repository = "https://github.com/turinglabsorg/mcaifee"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"

[dev-dependencies]
tempfile = "3"
